quantum_immune_mesh/k8s_infra/04-skywalking-ui-fix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skywalking-ui
  namespace: observability
spec:
  replicas: 1
  strategy:
    type: Recreate # 🎯 Purga total de sockets colgados antes de levantar el nuevo
  selector:
    matchLabels:
      app: skywalking-ui
  template:
    metadata:
      labels:
        app: skywalking-ui
    spec:
      containers:
      - name: skywalking-ui
        image: apache/skywalking-ui:9.4.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: ui-port
