quantum_immune_mesh/k8s_infra/01-infraestructura.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: q-immune-mesh-deployment
  namespace: default
  labels:
    app: q-immune-mesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: q-immune-mesh
  template:
    metadata:
      labels:
        app: q-immune-mesh
    spec:
      containers:
      - name: quantum-api
        image: q-immune-mesh-img:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
          name: api-port
---
apiVersion: v1
kind: Service
metadata:
  name: q-immune-mesh-service
  namespace: default
spec:
  selector:
    app: q-immune-mesh
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
