quantum_immune_mesh/k8s_infra/05-skywalking-ui-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: skywalking-ui-loadbalancer
  namespace: observability
spec:
  # 🎯 BALANCEADOR DE HARDWARE: MetalLB le asignará una IP real externa de Colima al instante
  type: LoadBalancer
  selector:
    app: skywalking-ui
  ports:
  - name: http
    protocol: TCP
    port: 8080       # Puerto en el que entrarás desde tu navegador
    targetPort: 8080 # Puerto interno del contenedor
